feat: project management

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.4"
+        "@heroicons/react": "^2.1.4",
+        "sweetalert2": "^11.12.2",
+        "sweetalert2-react-content": "^5.0.7"
     }
 }
